chore: refractor code for voucher
