# src/main/java/pro/craftlab/voucher/endpoint/rest/controller/CustomerController.java
@@ -6,6 +6,8 @@ import org.springframework.web.bind.annotation.*;
 import pro.craftlab.voucher.PojaGenerated;
 import pro.craftlab.voucher.endpoint.rest.controller.mapper.CustomerRestMapper;
 import pro.craftlab.voucher.endpoint.rest.model.Customer;
+import pro.craftlab.voucher.repository.CustomerRepository;
+import pro.craftlab.voucher.repository.model.Voucher;
 import pro.craftlab.voucher.service.event.CustomerService;
 import pro.craftlab.voucher.service.event.VoucherService;
 
@@ -16,6 +18,7 @@ public class CustomerController {
   private CustomerService customerService;
   private CustomerRestMapper customerRestMapper;
   private VoucherService voucherGeneratorService;
+  private final CustomerRepository customerRepository;
 
   @GetMapping("/customer/{id}")
   public Customer getCustomerById(@PathVariable String id) {
@@ -29,7 +32,14 @@ public class CustomerController {
   }
 
   @PostMapping("/customer/{id}/code_voucher")
-  public String generateVoucherCodeForCustomer(@PathVariable String id) {
-    return voucherGeneratorService.generateVoucherCodeForCustomer(id);
+  public Voucher generateVoucherCodeForCustomer(@PathVariable String idCustomer) {
+    return voucherGeneratorService.generateVoucherCodeForCustomer(idCustomer);
+  }
+
+  @GetMapping("/customer/{id}")
+  public Customer getCustomerWithVouchers(@PathVariable String id) {
+    pro.craftlab.voucher.repository.model.Customer customer = customerRepository.findById(id)
+            .orElseThrow(() -> new RuntimeException("Customer not found"));
+    return customerRestMapper.toRest(customer);
   }
 }
